# moonleaf

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: compare.rs  mod.rs  run.rs  sim.rs  validate.rs
crates/core/: Cargo.toml
crates/sim/: Cargo.toml
