[workspace]
resolver = "3"
members = ["crates/core", "crates/sim", "crates/cli"]

[workspace.package]
edition = "2024"
rust-version = "1.96.0"
license = "MIT"

[workspace.dependencies]
moonleaf-core = { path = "crates/core" }
moonleaf-sim = { path = "crates/sim" }

tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hdrhistogram = "7"
rand = "0.9"
